--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,7 @@
                 <div class="chart-legend">
                     <span class="legend-item mic"><span class="legend-color"></span>Микрофон</span>
                     <span class="legend-item sys"><span class="legend-color"></span>Аудио</span>
+                    <span class="legend-item recording-bg"><span class="legend-color"></span>Запись</span>
                     <span class="legend-item transcription-bg"><span class="legend-color"></span>Транскрибация</span>
                     <span class="legend-item protocol-bg"><span class="legend-color"></span>Протокол</span>
                 </div>
